found one more contrast issue and fixed

--- a/styles.css
+++ b/styles.css
@@ -55,9 +55,9 @@ button{
     text-align:center;
 }
 .cb{
-    color: grey;
+    color: deeppink;
 
-    border: 2px solid grey;
+    border: 2px solid deeppink;
 
 
 }
